fixed overflow bug for hotspot lists on search panel

--- a/static/style/index.css
+++ b/static/style/index.css
@@ -208,7 +208,6 @@ svg {
     width: 100vw;
     height: calc(100vh - 65px);
     align-items: stretch;
-    /* overflow: hidden; */
 }
 
 body {
@@ -229,8 +228,16 @@ body {
 
 #hotspotsList {
     margin-top: 2.5%;
+    margin-bottom: 10%;
     margin-left: 5%;
     margin-right: 10%;
+    height: 65%;
+}
+
+.hotspot-item {
+    border-radius: 10px;
+    background-color: white;
+    width: 100%;
 }
 
 .vertical-separator {
@@ -242,7 +249,8 @@ body {
 /* Search bar styling. */
 
 .searchbar-sort {
-    margin-top: 5%;
+    padding-top: 5%;
+    padding-bottom: 10%;
 }
 
 .visible-scrollbar::-webkit-scrollbar {
@@ -341,11 +349,10 @@ body {
     border-right: 1px solid #555;
     border-left: 2px solid #555;
     border-bottom: 2px solid #555;
-    border-radius: 10px; 
 }
 
 .filter-form {
-    padding-left: 15%;
+    padding-left: 35px;
     margin-left: 5%;
     border-left: 1px solid #5162ed;
     border-top: 1px solid #5162ed;
@@ -370,10 +377,11 @@ body {
     border-right: 2px solid #5162ed; 
 }
 
-.search-bar-panel {
+.searchbar-panel {
     background-color: #E1E6F6;
     border-right: 4px solid #5162ed; 
     width: 25%;
+    overflow-y: auto;
 }
 
 .open-filter-button {
